--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sapatportfolio",
-  "homepage": "https://github.com/Eagerradical/portfolioProto.git",
+  "name": "sapathdahal",
+  "homepage": "https://github.com/sapathdahal/portfolioSapath.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,8 +26,19 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.6.8",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.6",
+    "@types/estree": "^1.0.6",
+    "@types/json-schema": "^7.0.15",
+    "@types/lodash": "^4.17.13",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^22.10.1",
+    "@types/prop-types": "^15.7.13",
+    "@types/react": "^18.3.13",
+    "@types/react-dom": "^18.3.1",
     "@types/react-lazyload": "^3.2.3",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
